# OsteoScan

./: .gitattributes  .replit  app.py  main.py  pyproject.toml  requirements.txt
model/: osteoporosis_model.h5
static/css/: custom.css
static/js/: upload.js
templates/: base.html  index.html
utils/: model.py
